--- a/html/src/localization/zh-TW/en.json
+++ b/html/src/localization/zh-TW/en.json
@@ -92,6 +92,8 @@
             "avatars": {
                 "header": "角色"
             },
+            "bulk_unfavorite_mode": "Bulk Unfavorite Mode",
+            "bulk_unfavorite_selection": "Bulk Unfavorite Selection",
             "refresh_tooltip": "重新整理所有收藏",
             "export": "匯出",
             "import": "匯入",
@@ -100,7 +102,10 @@
             "visibility_tooltip": "變更可見度",
             "rename_tooltip": "重新命名",
             "clear_tooltip": "清除",
-            "delete_tooltip": "刪除"
+            "delete_tooltip": "刪除",
+            "unavailable_tooltip": "Unavailable",
+            "private": "Private",
+            "sort_by": "Sort By"
         },
         "friend_log": {
             "filter_placeholder": "篩選好友紀錄",
@@ -121,14 +126,13 @@
             "bulk_unfriend": "批次解除好友",
             "bulk_unfriend_selection": "批次解除已選擇的好友",
             "load": "讀取缺失的項目",
-            "load_notice": "這會向 API 傳送大量請求，所以請謹慎使用",
             "load_tooltip": "讀取",
-            "cancel_tooltip": "取消",
             "favorites_only_tooltip": "僅篩選收藏",
             "search_placeholder": "搜尋好友",
             "filter_placeholder": "篩選好友",
             "refresh_tooltip": "重新整理",
-            "clear_tooltip": "清除結果"
+            "clear_tooltip": "清除結果",
+            "cancel_tooltip": "取消"
         },
         "profile": {
             "profile": {
@@ -138,6 +142,7 @@
                 "two_factor_enabled": "已啟用",
                 "two_factor_disabled": "已停用",
                 "logout": "登出",
+                "manage_gallery_icon": "Manage Photos/Icons/Emojis",
                 "export_friend_list": "匯出好友列表",
                 "export_own_avatars": "匯出私有角色",
                 "discord_names": "Discord 名稱",
@@ -209,6 +214,17 @@
                     "header": "遊戲紀錄",
                     "resource_load": "Udon 資源載入紀錄"
                 },
+                "automation": {
+                    "header": "Automation",
+                    "auto_state_change": "Auto Status Change",
+                    "auto_state_change_tooltip": "Automatically change status when there are other people in the instance (Alone / Company)",
+                    "auto_state_change_off": "Off",
+                    "auto_state_change_active_or_ask_me": "Active / Ask Me",
+                    "auto_state_change_active_or_busy": "Active / Busy",
+                    "auto_state_change_join_me_or_ask_me": "Join Me / Ask Me",
+                    "auto_state_change_join_me_or_busy": "Join Me / Busy",
+                    "auto_state_change_ask_me_or_busy": "Ask Me / Busy"
+                },
                 "legal_notice": {
                     "header": "法律聲明",
                     "info": "VRCX 是一個提供好友管理的輔助應用程式。這個程式使用非官方的 VRChat API (VRCSDK)。",
@@ -217,7 +233,7 @@
                     "open_source_software_notice": "開放原始碼軟體授權條款"
                 },
                 "contributors": {
-                    "header": "貢獻者"
+                    "header": "Contributors"
                 }
             },
             "appearance": {
@@ -228,6 +244,9 @@
                     "theme_mode_system": "系統",
                     "theme_mode_light": "淺色",
                     "theme_mode_dark": "深色",
+                    "theme_mode_darkvanilla": "Dark Vanilla",
+                    "theme_mode_pink": "Pink",
+                    "theme_mode_material3": "Material 3",
                     "vrcplus_profile_icons": "VRChat+ 個人檔案圖示",
                     "disable_tooltips": "關閉提示",
                     "sort_favorite_by": "收藏排序依據",
@@ -360,6 +379,7 @@
                     "header": "進階設定",
                     "launch_options": "啟動選項",
                     "screenshot_metadata": "螢幕截圖詳細資訊",
+                    "common_folders": "Common Folders",
                     "pending_offline": {
                         "header": "待確認離線",
                         "description": "將玩家標記為離線之前延遲（防止誤判）",
@@ -425,6 +445,7 @@
                         "avatar_cache": "角色快取：",
                         "group_cache": "群組快取：",
                         "avatar_name_cache": "角色名稱快取：",
+                        "instance_cache": "Instance cache:",
                         "clear_cache": "清除快取",
                         "auto_clear_cache": "自動清除快取",
                         "download_history": "下載紀錄",
@@ -508,7 +529,6 @@
                 "favorite_tooltip": "新增到我的收藏",
                 "unfavorite_tooltip": "從我的收藏中移除",
                 "refresh": "重新整理",
-                "copy_url": "複製玩家連結",
                 "invite": "邀請",
                 "invite_with_message": "邀請（訊息）",
                 "request_invite": "請求邀請",
@@ -542,7 +562,11 @@
                 "header": "資訊",
                 "launch_invite_tooltip": "啟動 / 邀請",
                 "self_invite_tooltip": "自我邀請",
-                "refresh_user_count_tooltip": "重新整理房間人數",
+                "refresh_instance_info": "Refresh Instance Info",
+                "instance_queue": "Queue:",
+                "instance_users": "Users:",
+                "instance_game_version": "Game Version:",
+                "instance_queuing_enabled": "Queuing Enabled",
                 "instance_creator": "房間建立者",
                 "note": "備註",
                 "note_placeholder": "點擊新增備註",
@@ -566,6 +590,11 @@
                 "avatar_cloning_allow": "允許",
                 "avatar_cloning_deny": "不允許",
                 "home_location": "家點",
+                "id": "User ID",
+                "id_tooltip": "Copy to clipboard",
+                "copy_id": "Copy ID",
+                "copy_url": "Copy URL",
+                "copy_display_name": "Copy DisplayName",
                 "accuracy_notice": "本地資料庫的資料可能不精確",
                 "instance_full": "已滿"
             },
@@ -579,8 +608,18 @@
             "worlds": {
                 "header": "世界",
                 "total_count": "總共 {count}",
-                "sort_by_name": "依名稱排序",
-                "sort_by_update": "依更新排序"
+                "sort_by": "Sort by:",
+                "order_by": "Order by:",
+                "sorting": {
+                    "updated": "Updated",
+                    "created": "Created",
+                    "favorites": "Favorites",
+                    "popularity": "Popularity"
+                },
+                "order": {
+                    "descending": "Descending",
+                    "ascending": "Ascending"
+                }
             },
             "favorite_worlds": {
                 "header": "收藏世界"
@@ -602,12 +641,19 @@
             "tags": {
                 "public": "公開",
                 "private": "私人",
+                "avatar_scaling_disabled": "Avatar Scaling Disabled",
+                "future_proofing": "Future Proofing",
                 "labs": "社區實驗室",
-                "cache": "快取"
+                "cache": "快取",
+                "content_horror": "Horror",
+                "content_gore": "Gore",
+                "content_violence": "Violence",
+                "content_adult": "Adult",
+                "content_sex": "Sexual"
             },
             "actions": {
                 "delete_cache_tooltip": "從快取中刪除世界",
-                "favorite_tooltip": "新增到我的收藏",
+                "favorites_tooltip": "Favorites",
                 "refresh": "重新整理",
                 "new_instance": "新房間",
                 "make_home": "設為家點",
@@ -617,6 +663,7 @@
                 "rename": "重新命名",
                 "change_description": "變更敘述",
                 "change_capacity": "變更最大玩家上限",
+                "change_recommended_capacity": "Change Recommended Capacity",
                 "change_preview": "變更 YouTube 預覽",
                 "change_tags": "變更標籤",
                 "change_image": "變更圖片",
@@ -631,18 +678,21 @@
                 "private_count": "私人 {count}",
                 "capacity_count": "玩家上限 {count} ({max})",
                 "self_invite_tooltip": "自我邀請",
-                "refresh_user_count_tooltip": "重新整理房間人數",
+                "refresh_instance_info": "Refresh Instance Info",
                 "instance_full": "已滿",
                 "instance_creator": "房間建立者"
             },
             "info": {
                 "header": "資訊",
+                "memo": "Memo",
+                "memo_placeholder": "Click to add a memo",
                 "id": "世界 ID",
                 "id_tooltip": "複製到剪貼簿",
                 "copy_id": "複製 ID",
                 "copy_url": "複製連結",
                 "copy_name": "複製名稱",
                 "youtube_preview": "YouTube 預覽",
+                "author_tags": "Author Tags",
                 "players": "玩家人數",
                 "favorites": "收藏次數",
                 "visits": "總綁訪次數",
@@ -651,6 +701,8 @@
                 "popularity": "熱門度",
                 "created_at": "創建時間",
                 "last_updated": "最後更新",
+                "publication_date": "Publication Date",
+                "labs_publication_date": "Labs Publication Date",
                 "version": "版本",
                 "platform": "平台",
                 "last_visited": "上次拜訪",
@@ -667,7 +719,13 @@
                 "public": "公開",
                 "private": "私人",
                 "fallback": "備用",
-                "cache": "快取"
+                "future_proofing": "Future Proofing",
+                "cache": "快取",
+                "content_horror": "Horror",
+                "content_gore": "Gore",
+                "content_violence": "Violence",
+                "content_adult": "Adult",
+                "content_sex": "Sexual"
             },
             "labels": {
                 "public": "（公開）",
@@ -688,6 +746,7 @@
                 "make_private": "設為私人",
                 "rename": "重新命名",
                 "change_description": "變更敘述",
+                "change_content_tags": "Change Content Tags",
                 "change_image": "變更圖片",
                 "download_package": "下載 Unity Package",
                 "delete": "刪除"
@@ -702,8 +761,8 @@
                 "last_updated": "最後更新",
                 "version": "版本",
                 "platform": "平台",
-                "memo": "備忘錄",
-                "memo_placeholder": "點擊新增備忘錄"
+                "memo": "Memo",
+                "memo_placeholder": "Click to add a memo"
             },
             "json": {
                 "header": "原始資料",
@@ -745,6 +804,7 @@
             },
             "info": {
                 "header": "資訊",
+                "instances": "Instances",
                 "announcement": "公告",
                 "instance_full": "已滿",
                 "rules": "規則",
@@ -778,7 +838,10 @@
                 "filters": {
                     "everyone": "所有人",
                     "users_with_no_role": "沒有身分的玩家"
-                }
+                },
+                "unsubscribed_announcements": "Unsubscribed from announcements",
+                "visibility": "Visibility:",
+                "representing": "Representing"
             },
             "gallery": {
                 "header": "畫廊"
@@ -841,13 +904,19 @@
             "instance_creator": "房間建立者",
             "instance_creator_placeholder": "選擇玩家",
             "group_placeholder": "選擇群組",
+            "role_placeholder": "Choose Roles",
             "group_id": "群組 ID",
             "location": "地點",
             "url": "連結",
             "copy_url": "複製連結",
             "self_invite": "自我邀請",
             "invite": "邀請",
-            "launch": "啟動"
+            "launch": "啟動",
+            "create_instance": "Create Instance",
+            "queueEnabled": "Queue",
+            "normal": "Normal",
+            "group": "Group",
+            "roles": "Roles"
         },
         "launch_options": {
             "header": "啟動選項",
@@ -871,9 +940,11 @@
             "max_cache_size": "最大快取大小 [GB] （最小 20GB）",
             "cache_expiry_delay": "快取保存時長 [日] （30 - 150）",
             "cache_directory": "覆蓋快取資料夾位置",
+            "picture_directory": "Custom Picture Folder Location",
             "fpv_steadycam_fov": "第一人稱平滑鏡頭視野範圍",
             "camera_resolution": "相機解析度",
             "screenshot_resolution": "螢幕截圖解析度",
+            "picture_sort_by_date": "Sort pictures into folders by date",
             "disable_discord_presence": "停用 Discord 遊戲狀態",
             "vrchat_docs": "VRChat 文件",
             "cancel": "取消",
@@ -888,10 +959,30 @@
         },
         "set_world_tags": {
             "header": "設定世界標籤",
+            "avatar_scaling_disabled": "Disable avatar scaling",
             "enable_debugging": "為其他人啟用世界偵錯",
-            "seprator": "使用逗號來分隔每個標籤",
+            "author_tags": "Author Tags (comma separated)",
+            "content_tags": "Content Warning Tags",
+            "content_horror": "Horror",
+            "content_gore": "Gore",
+            "content_violence": "Violence",
+            "content_adult": "Adult",
+            "content_sex": "Sexual",
             "cancel": "取消",
             "save": "儲存"
+        },
+        "set_avatar_tags": {
+            "header": "Set Avatar Tags",
+            "content_tags": "Content Warning Tags",
+            "content_horror": "Horror",
+            "content_gore": "Gore",
+            "content_violence": "Violence",
+            "content_adult": "Adult",
+            "content_sex": "Sexual",
+            "select_all": "Select All",
+            "select_none": "Select None",
+            "cancel": "Cancel",
+            "save": "Save"
         },
         "download_history": {
             "header": "下載紀錄",
@@ -920,7 +1011,9 @@
             "launch": "啟動"
         },
         "export_friends_list": {
-            "header": "匯出好友列表"
+            "header": "匯出好友列表",
+            "csv": "CSV",
+            "json": "JSON"
         },
         "export_own_avatars": {
             "header": "匯出私有角色"
@@ -1006,7 +1099,7 @@
         },
         "invite_to_group": {
             "header": "邀請到群組",
-            "description": "請不要濫用群組邀請，邀請太多玩家加入群組會導致你被停權。",
+            "description": "Don't spam invite users, you'll get rate limited.",
             "choose_group_placeholder": "選擇群組",
             "groups": "群組",
             "choose_friends_placeholder": "選擇好友",
@@ -1073,12 +1166,14 @@
         },
         "gallery_icons": {
             "header": "相簿和圖示",
-            "description": "推薦圖片尺寸：1200 像素 x 900 像素",
+            "description": "Recommended image size: 1200x900px (4:3)",
             "gallery": "相簿",
             "icons": "圖示",
+            "emojis": "Emojis",
             "refresh": "重新整理",
             "upload": "上傳",
-            "clear": "清除"
+            "clear": "清除",
+            "emoji_animation_styles": "Animation Styles"
         },
         "change_content_image": {
             "avatar": "變更角色圖片",
@@ -1141,7 +1236,7 @@
         "otp": {
             "header": "雙重認證",
             "description": "輸入你儲存的其中一個備份驗證碼",
-            "use_totp": "使用驗證碼",
+            "use_totp": "Use TOTP",
             "verify": "驗證",
             "input_placeholder": "備份驗證碼",
             "input_error": "無效的代碼"
@@ -1149,7 +1244,7 @@
         "email_otp": {
             "header": "雙重認證",
             "description": "輸入寄送到電子信箱的數字代碼",
-            "cancel": "取消",
+            "resend": "Resend Email",
             "verify": "驗證",
             "input_placeholder": "代碼",
             "input_error": "無效的代碼"
@@ -1272,12 +1367,22 @@
         },
         "change_world_capacity": {
             "header": "變更世界最大人數",
-            "description": "輸入世界最大人數, 最大：40",
+            "description": "Enter world maximum capacity (hard cap), Max: 80",
             "cancel": "取消",
             "ok": "OK",
             "input_error": "請輸入有效的人數",
             "message": {
                 "success": "已變更世界最大人數"
+            }
+        },
+        "change_world_recommended_capacity": {
+            "header": "Change Recommended Capacity",
+            "description": "Enter world recommended capacity (soft cap)",
+            "cancel": "Cancel",
+            "ok": "OK",
+            "input_error": "Valid number is required",
+            "message": {
+                "success": "World recommended capacity changed"
             }
         },
         "change_world_preview": {
@@ -1366,10 +1471,10 @@
             "rank": "階級",
             "language": "語言",
             "bioLink": "社交連結",
+            "date": "時間",
             "user": "玩家",
             "type": "種類",
-            "detail": "詳細",
-            "date": "時間"
+            "detail": "詳細"
         },
         "friendLog": {
             "date": "時間",
